feat(ui-logging-video-consent): Refactor deliver button logic, enhance logging, and update video consent payload
- Keep video preview visible during recording to allow operator camera verification
- Refactor deliver button state logic to enable only on terminal/actionable stages (ready, failed, invalidated)
- Consolidate deliver button state management into single updateDeliverButtonState function
- Add timestamp helpers (ts, logInit, logFatal) for consistent initialization logging
- Update all initialization console logs to use new logging helpers with ISO timestamps
- Add timestamps to server logger (info, warn, error, debug) for better observability
- Update video consent WebSocket payload: rename consentTimestamp to timestamp and add consentGranted boolean flag
- Add stopRecordingPromise tracking to ConnectionState interface for async operation management
- Improves logging consistency across initialization and runtime, clarifies UI state transitions, and standardizes video consent protocol

--- a/public/index.html
+++ b/public/index.html
@@ -1611,8 +1611,7 @@
         hide(dom.videoFpsConfig);
         // Disable video consent checkbox during recording (Req 1.4)
         disable(dom.videoConsentCheckbox);
-        // Hide video preview thumbnail during recording (shown only in IDLE)
-        hide(videoDom.previewContainer);
+        // Keep video preview visible during recording so operator can verify camera is working
         hide(dom.durationEstimate);
 
         hide(dom.btnStart);
@@ -1668,12 +1667,12 @@
         hide(dom.btnSave);
         hide(dom.btnReplay);
         // Deliver button gating based on pipeline stage (Req 4.1-4.4)
-        // Disable during in-progress stages; enable on terminal/actionable stages
+        // Disable during in-progress stages and initial idle; enable only on terminal/actionable stages
         // Server remains authoritative — UI gating is advisory only (Req 4.4)
-        if (pipelineStage === "processing_speech" || pipelineStage === "generating_evaluation" || pipelineStage === "synthesizing_audio") {
-          disable(dom.btnDeliver);
-        } else {
+        if (pipelineStage === "ready" || pipelineStage === "failed" || pipelineStage === "invalidated") {
           enable(dom.btnDeliver);
+        } else {
+          disable(dom.btnDeliver);
         }
         enable(dom.btnPanic);
 
@@ -1893,10 +1892,10 @@
      */
     function updateDeliverButtonState(stage) {
       if (currentState !== SessionState.PROCESSING) return;
-      if (stage === "processing_speech" || stage === "generating_evaluation" || stage === "synthesizing_audio") {
-        disable(dom.btnDeliver);
-      } else if (stage === "ready" || stage === "failed" || stage === "invalidated") {
+      if (stage === "ready" || stage === "failed" || stage === "invalidated") {
         enable(dom.btnDeliver);
+      } else {
+        disable(dom.btnDeliver);
       }
     }
 
@@ -1957,7 +1956,8 @@
           // Send video consent to server (Req 1.2)
           wsSend({
             type: "set_video_consent",
-            consentTimestamp: new Date().toISOString(),
+            consentGranted: true,
+            timestamp: new Date().toISOString(),
           });
 
           // Send video_stream_ready to server (Req 1.5)
