feat(processing-indicator): Simplify pipeline stage updates and initialize video processor
- Update processing indicator default text to "Processing speech..." for clarity
- Remove conditional check before updating processing indicator on pipeline stage changes
- Add VideoProcessor imports and type definitions to main entry point
- Integrate videoProcessorFactory into SessionManager initialization
- Streamline processing indicator logic to always reflect current pipeline state

--- a/public/index.html
+++ b/public/index.html
@@ -1245,7 +1245,7 @@
 
     <!-- Processing Indicator -->
     <div id="processing-indicator" class="processing-indicator" role="status" aria-live="polite">
-      <span>✓ Speech processed — review transcript and click "Deliver Evaluation" when ready</span>
+      <span>Processing speech...</span>
     </div>
 
     <!-- Transcript Panel -->
@@ -1686,9 +1686,7 @@
         hide(dom.speakingIndicator);
         show(dom.processingIndicator);
         // Update processing indicator text to reflect current pipeline stage
-        if (pipelineStage !== "idle") {
-          updateProcessingIndicator(pipelineStage);
-        }
+        updateProcessingIndicator(pipelineStage);
         hideElapsedTime();
         hide(dom.audioLevel);
 
